--- a/workHistory.html
+++ b/workHistory.html
@@ -146,8 +146,7 @@
 <div class="header">
    
     <h1>Jeffrey Godzisz</h1>
-    <h2>Portfolio Page <br>
-    Work History</h2>
+    <h2>Portfolio Page</h2>
     
 </div>
 <div class="main">
