--- a/Contact.HTML
+++ b/Contact.HTML
@@ -134,7 +134,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-        <a href="#">C#</a>
+        <a href="CExamples.html">C#</a>
         <a href="#">Python</a>
         <a href="JavascriptExamples.HTML">JavaScript</a>
       </div>
