--- a/workHistory.html
+++ b/workHistory.html
@@ -135,7 +135,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-          <a href="C#Examples.html">C#</a>
+          <a href="CExamples.html">C#</a>
           <a href="PythonExamples.html">Python</a>
           <a href="JavascriptExamples.HTML">JavaScript</a>
         </div>
