--- a/CExamples.html
+++ b/CExamples.html
@@ -18,7 +18,7 @@
             <img src="Headshot.jpg" alt="A recent headshot of the creator of this portfolio page." style="width: 150px;" >
         </div>
         <!--Menu inside the sidebar-->
-        <a href="Portfolio_page.html"><i class= "fa-solid fa-home"></i>Home</a>
+        <a href="index.html"><i class= "fa-solid fa-home"></i>Home</a>
         <a href="aboutMe.html"><i class= "fa-solid fa-user"></i>About Me</a>
         <a href="workHistory.html"><i class="fa-solid fa-briefcase"></i>Work History</a>
         <a href="Contact.HTML"><i class="fa-solid fa-at"></i>Contact</a>
