--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="sidenav">
         <!--Sidebar image of headshot-->
         <div id ="headshot">
-            <img src="Headshot.jpg" alt="A recent headshot of the creator of this portfolio page." style="width: 150px;" >
+            <img src="Headshot.jpg" alt="A recent headshot of the creator of this portfolio page." >
         </div>
         <!--Menu inside the sidebar-->
         <a href="index.html"><i class= "fa-solid fa-home"></i>Home</a>
