--- a/aboutMe.html
+++ b/aboutMe.html
@@ -14,7 +14,7 @@
 
     <div class="sidenav">
         <!--Sidebar image of headshot-->
-        <div id ="headshot">
+        <div class="headshot">
             <img src="Headshot.jpg" alt="A recent headshot of the creator of this portfolio page.">
         </div>
         <!--Menu inside the sidebar-->
