--- a/PythonExamples.html
+++ b/PythonExamples.html
@@ -43,7 +43,7 @@
 <div class="main">
 <h2>Here is a voice assistant I coded using python, chatGPT, and a tutorial from youtuber AI Austin</h2>
     <p>You will need to edit the API key with your own from <a href="www.openai.com">www.openai.com</p>
-        <a href="vocieAssistant.py" download>Download file></a>
+        <a href="vocieAssistant.py" download="voiceAssistant.py">Download file</a>
     
     
 </div>
