--- a/Contact.HTML
+++ b/Contact.HTML
@@ -26,7 +26,7 @@
       </button>
       <div class="dropdown-container">
         <a href="CExamples.html">C#</a>
-        <a href="#">Python</a>
+        <a href="PythonExamples.html">Python</a>
         <a href="JavascriptExamples.HTML">JavaScript</a>
       </div>
     </div>
