--- a/Contact.HTML
+++ b/Contact.HTML
@@ -19,7 +19,7 @@
         <!--Menu inside the sidebar-->
       <a href="index.html"><i class= "fa-solid fa-home"></i>Home</a>
       <a href="aboutMe.html"><i class= "fa-solid fa-user"></i>About Me</a>
-      <a href="#clients"><i class="fa-solid fa-briefcase"></i>Work History</a>
+      <a href="workHistory.html"><i class="fa-solid fa-briefcase"></i>Work History</a>
       <a href="Contact.HTML"><i class="fa-solid fa-at"></i>Contact</a>
       <button class="dropdown-btn"><i class="fa-solid fa-code"></i>Examples
         <i class="fa fa-caret-down"></i>
